force-app/main/default/objects/HOMEtracker__Property__c/fields/Deed_Restriction_picklist__c.field-meta.xml
<CustomField>
    <fullName>Deed_Restriction_picklist__c</fullName>
    <label>Deed Restriction picklist</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Need</fullName>
                <default>true</default>
                <label>Draft: NEEDED</label>
            </value>
            <value>
                <fullName>Draft: BEING CREATED</fullName>
            </value>
            <value>
                <fullName>Drafted  and sent to developer - follow-up needed</fullName>
                <label>Draft: SENT TO DEVELOPER</label>
            </value>
            <value>
                <fullName>At CGP&amp;H - waiting for signature</fullName>
                <label>Draft: AWAITING CGP&amp;H SIGNATURE</label>
            </value>
            <value>
                <fullName>Sent to muni for signature</fullName>
                <label>Draft: SENT TO MUNI</label>
            </value>
            <value>
                <fullName>Recorded copy on file</fullName>
                <label>DEED RECORDED &amp; FILED</label>
            </value>
            <value>
                <fullName>OLD - NEEDS FOLLOW-UP</fullName>
            </value>
            <value>
                <fullName>NOT FOUND - TRANSFERRED TO MUNI ATTRNY</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Drafted and sent to client</fullName>
                <isActive>false</isActive>
                <label>Drafted and sent to developer</label>
            </value>
            <value>
                <fullName>Need - High priority</fullName>
                <isActive>false</isActive>
                <label>Need - High priority</label>
            </value>
            <value>
                <fullName>Waiting for recorded doc to come back from county</fullName>
                <isActive>false</isActive>
                <label>Waiting for recorded doc to come back from county</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>