force-app/main/default/objects/HOMEtracker__Property__c/fields/Deed_Restriction_Status__c.field-meta.xml
<CustomField>
    <fullName>Deed_Restriction_Status__c</fullName>
    <inlineHelpText>Status of executing deed restriction.  Is draft done?  Do we have recording copy in our file?</inlineHelpText>
    <label>Deed Restriction Status</label>
    <type>TextArea</type>
</CustomField>