force-app/main/default/objects/HOMEtracker__Property__c/fields/Dev_Income_Limit__c.field-meta.xml
<CustomField>
    <fullName>Dev_Income_Limit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The income limit for the region this development is located in.</description>
    <inlineHelpText>The income limit for the region this development is located in.</inlineHelpText>
    <label>Income Limit</label>
    <referenceTo>Income_Limits__c</referenceTo>
    <relationshipLabel>Properties</relationshipLabel>
    <relationshipName>Properties</relationshipName>
    <type>Lookup</type>
</CustomField>