force-app/main/default/objects/HOMEtracker__Property__c/fields/DEV_Inventory__c.field-meta.xml
<CustomField>
    <fullName>DEV_Inventory__c</fullName>
    <formula>IF(  RecordTypeId = &apos;012o00000003bU2&apos;,HYPERLINK(&apos;https://cgph.lightning.force.com/lightning/r/Report/00O6O000008SdVQUA0/view?queryScope=userFolders&amp;fv0=&apos;&amp; Name ,&quot;INVENTORY&quot;),
HYPERLINK(&apos;https://cgph.lightning.force.com/lightning/r/Report/00O6O000008SdVQUA0/view?queryScope=userFolders&amp;fv0=&apos;&amp;  Development_address__r.Name ,&quot;DEVELOPMENT INVENTORY&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DEV Inventory</label>
    <type>Text</type>
</CustomField>