force-app/main/default/objects/HOMEtracker__Property__c/fields/Dev_RTV_Status__c.field-meta.xml
<CustomField>
    <fullName>Dev_RTV_Status__c</fullName>
    <formula>IF(  RecordTypeId = &apos;012o00000003bU2&apos;,HYPERLINK(&apos;https://cgph.lightning.force.com/lightning/r/Report/00O6O000008Sd4eUAC/view?queryScope=userFolders&amp;fv2=&apos;&amp; Name ,&quot;CLICK HERE&quot;),
HYPERLINK(&apos;https://cgph.lightning.force.com/lightning/r/Report/00O6O000008Sd4eUAC/view?queryScope=userFolders&amp;fv2=&apos;&amp;  Development_address__r.Name ,&quot;CLICK HERE&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TEST Dev IF Status</label>
    <type>Text</type>
</CustomField>