force-app/main/default/objects/HOMEtracker__Property__c/fields/DEV_TS2__c.field-meta.xml
<CustomField>
    <fullName>DEV_TS2__c</fullName>
    <formula>Development_address__r.TS1__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DEV TS2</label>
    <type>Text</type>
</CustomField>