force-app/main/default/objects/HOMEtracker__Property__c/fields/Devel_Visible_on_Website__c.field-meta.xml
<CustomField>
    <fullName>Devel_Visible_on_Website__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this box is checked, its Development Page will be visible on our website.</description>
    <inlineHelpText>If this box is checked, its Development Page will be visible on our website.</inlineHelpText>
    <label>Visible on Website?</label>
    <type>Checkbox</type>
</CustomField>