force-app/main/default/objects/HOMEtracker__Property__c/fields/Developer_Setup_Contact__c.field-meta.xml
<CustomField>
    <fullName>Developer_Setup_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Business contact and/or Owner of development</description>
    <inlineHelpText>Business contact and/or Owner of development</inlineHelpText>
    <label>Lead Developer / Setup Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Properties (Developer Setup Contact)</relationshipLabel>
    <relationshipName>Properties8</relationshipName>
    <type>Lookup</type>
</CustomField>