force-app/main/default/objects/HOMEtracker__Property__c/fields/Development_address__c.field-meta.xml
<CustomField>
    <fullName>Development_address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Development Address</label>
    <referenceTo>HOMEtracker__Property__c</referenceTo>
    <relationshipLabel>Units</relationshipLabel>
    <relationshipName>Properties</relationshipName>
    <type>Lookup</type>
</CustomField>