force-app/main/default/objects/HOMEtracker__Property__c/fields/Development_Address_Text_Calc__c.field-meta.xml
<CustomField>
    <fullName>Development_Address_Text_Calc__c</fullName>
    <formula>Development_address__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Development Address Text Calc</label>
    <type>Text</type>
</CustomField>