force-app/main/default/objects/HOMEtracker__Property__c/fields/Development_Allows_Rental_Assistance__c.field-meta.xml
<CustomField>
    <fullName>Development_Allows_Rental_Assistance__c</fullName>
    <defaultValue>&quot;Yes&quot;</defaultValue>
    <description>Shows if development allows rental asst from other sources. If &quot;Yes&quot;, the &quot;Rental Asst Permitted&quot; field will be auto-checked on all properties in this development. If &quot;No&quot;, it will be auto-unchecked. Default: Yes. Reset when new properties are created.</description>
    <inlineHelpText>Shows if development allows rental asst from other sources. If &quot;Yes&quot;, the &quot;Rental Asst Permitted&quot; field will be auto-checked on all properties in this development. If &quot;No&quot;, it will be auto-unchecked. Default: Yes. Reset when new properties are created.</inlineHelpText>
    <label>Development Allows Rental Assistance?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <default>true</default>
                <label>Yes</label>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>