force-app/main/default/objects/HOMEtracker__Property__c/fields/Development_Binder_Status__c.field-meta.xml
<CustomField>
    <fullName>Development_Binder_Status__c</fullName>
    <label>Development Binder Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hard copy</fullName>
            </value>
            <value>
                <fullName>Digital</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>