force-app/main/default/objects/HOMEtracker__Property__c/fields/Development_Folder__c.field-meta.xml
<CustomField>
    <fullName>Development_Folder__c</fullName>
    <description>SharePoint folder containing applicant scanned files for this development</description>
    <formula>IF( Municipality_Name__r.SharePoint_Folder_Created__c = true,
IF( Development_Folder_Created__c = true,
Municipality_Name__r.SharePoint_Folder_Muni_Calc__c &amp; &quot;/&quot;&amp;
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(
Name
,&quot; &quot;,&quot;%20&quot;)
,&quot;,&quot;,&quot;%2C&quot;)
,&quot;(&quot;,&quot;%28&quot;)
,&quot;)&quot;,&quot;%29&quot;)
,&quot;#&quot;,&quot;%23&quot;)
, &quot;DEVELOPMENT SHAREPOINT FOLDER NEEDED&quot;)
, &quot;MUNICIPALITY SHAREPOINT FOLDER NEEDED&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>SharePoint folder containing applicant scanned files for this development</inlineHelpText>
    <label>Development Folder</label>
    <type>Text</type>
</CustomField>