force-app/main/default/objects/HOMEtracker__Property__c/fields/Development_Folder_Created__c.field-meta.xml
<CustomField>
    <fullName>Development_Folder_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this when development folder is setup in SharePoint. The Development Folder link will not work until this is checked.</description>
    <inlineHelpText>Check this when development folder is setup in SharePoint. The Development Folder link will not work until this is checked.</inlineHelpText>
    <label>Development Folder Created</label>
    <type>Checkbox</type>
</CustomField>