force-app/main/default/objects/HOMEtracker__Property__c/fields/Development_Lease_Notes__c.field-meta.xml
<CustomField>
    <fullName>Development_Lease_Notes__c</fullName>
    <description>Enter notes regarding the lease follow up for this development.</description>
    <inlineHelpText>Enter notes regarding the lease follow up for this development.</inlineHelpText>
    <label>Development Lease Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>