force-app/main/default/objects/HOMEtracker__Property__c/fields/Development_Location__c.field-meta.xml
<CustomField>
    <fullName>Development_Location__c</fullName>
    <inlineHelpText>Address of development</inlineHelpText>
    <label>Development Location</label>
    <length>100</length>
    <type>Text</type>
</CustomField>