force-app/main/default/objects/HOMEtracker__Property__c/fields/Development_Primary_CM__c.field-meta.xml
<CustomField>
    <fullName>Development_Primary_CM__c</fullName>
    <formula>Development_address__r.Primary_Case_manager__r.FirstName
&amp;&quot; &quot;&amp;
Development_address__r.Primary_Case_manager__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Development Primary CM</label>
    <type>Text</type>
</CustomField>