force-app/main/default/objects/HOMEtracker__Property__c/fields/Development_Rental_Process__c.field-meta.xml
<CustomField>
    <fullName>Development_Rental_Process__c</fullName>
    <formula>IF(TEXT( Development_address__r.Rental_Process_Status__c )=&quot;&quot;,&quot;Prior Process&quot;, TEXT(Development_address__r.Rental_Process_Status__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Rental process used in this development.</inlineHelpText>
    <label>Development Rental Process</label>
    <type>Text</type>
</CustomField>