force-app/main/default/objects/HOMEtracker__Property__c/fields/Development_Target_Dates_List__c.field-meta.xml
<CustomField>
    <fullName>Development_Target_Dates_List__c</fullName>
    <formula>IF( RecordType.Name =&apos;Development&apos;,
HYPERLINK(
&apos;https://cgph.my.salesforce.com/ui/list/FilterEditPage?id=00BUq000000QP7d&amp;fval1=&apos;&amp;LEFT( Id ,15)&amp;&apos;&amp;retURL=%2Fa3g&amp;cancelURL=%2Fa3g%2Fo&apos;,
&apos;Click Here&apos;,
&apos;_blank&apos;
)
,
HYPERLINK(
&apos;https://cgph.my.salesforce.com/ui/list/FilterEditPage?id=00BUq000000QP7d&amp;fval1=&apos;&amp;LEFT( Development_address__r.Id ,15)&amp;&apos;&amp;retURL=%2Fa3g&amp;cancelURL=%2Fa3g%2Fo&apos;,
&apos;Click Here&apos;,
&apos;_blank&apos;
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Development Target Dates List</label>
    <type>Text</type>
</CustomField>