force-app/main/default/objects/HOMEtracker__Property__c/fields/Development_Type__c.field-meta.xml
<CustomField>
    <fullName>Development_Type__c</fullName>
    <label>Development Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Apartments</fullName>
            </value>
            <value>
                <fullName>Condominium</fullName>
            </value>
            <value>
                <fullName>Mobile or manufactured</fullName>
            </value>
            <value>
                <fullName>Single Family homes</fullName>
            </value>
            <value>
                <fullName>Town Homes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>