force-app/main/default/objects/HOMEtracker__Property__c/fields/DIPA__c.field-meta.xml
<CustomField>
    <fullName>DIPA__c</fullName>
    <inlineHelpText>Add or subtract a year to the initial rental pricing date in order to make adjustments for increases that should or should not be included in the vacancy price. (To subtract a year, enter &quot;-1&quot;)</inlineHelpText>
    <label>Date of Initial Pricing Adjustment</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>