force-app/main/default/objects/HOMEtracker__Property__c/fields/DIPAC__c.field-meta.xml
<CustomField>
    <fullName>DIPAC__c</fullName>
    <formula>Development_address__r.DIPA__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculated from development.  Edit on Development object</inlineHelpText>
    <label>Date of Initial Pricing Adjustment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>