force-app/main/default/objects/HOMEtracker__Property__c/fields/Disabled_eligible_regardless_of_age__c.field-meta.xml
<CustomField>
    <fullName>Disabled_eligible_regardless_of_age__c</fullName>
    <description>Choose &quot;Yes&quot; if this location allows underage applicants if they are disabled.</description>
    <inlineHelpText>Choose &quot;Yes&quot; if this location allows underage applicants if they are disabled.</inlineHelpText>
    <label>Disabled Eligible Regardless of Age?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>