force-app/main/default/objects/HOMEtracker__Property__c/fields/DR_of_years_in_control_period__c.field-meta.xml
<CustomField>
    <fullName>DR_of_years_in_control_period__c</fullName>
    <label>DR # of years in control period</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>