force-app/main/default/objects/HOMEtracker__Property__c/fields/DR_person_signing_for_ownership__c.field-meta.xml
<CustomField>
    <fullName>DR_person_signing_for_ownership__c</fullName>
    <inlineHelpText>name of person signing rental deed restriction for owner of property</inlineHelpText>
    <label>DR person signing for ownership</label>
    <type>TextArea</type>
</CustomField>