force-app/main/default/objects/HOMEtracker__Property__c/fields/DR_The_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>DR_The_Owner_Name__c</fullName>
    <inlineHelpText>name of ownership entity on rental deed restiction</inlineHelpText>
    <label>DR &quot;The Owner Name&quot;</label>
    <type>TextArea</type>
</CustomField>