force-app/main/default/objects/HOMEtracker__Property__c/fields/DR_title_of_person_signing_for_ownership__c.field-meta.xml
<CustomField>
    <fullName>DR_title_of_person_signing_for_ownership__c</fullName>
    <inlineHelpText>title of person signing for ownership</inlineHelpText>
    <label>DR title of person signing for ownership</label>
    <type>TextArea</type>
</CustomField>