force-app/main/default/objects/HOMEtracker__Property__c/fields/Dupe_Check__c.field-meta.xml
<CustomField>
    <fullName>Dupe_Check__c</fullName>
    <inlineHelpText>used by data loader for processing duplicate check rules</inlineHelpText>
    <label>Dupe Check</label>
    <length>5</length>
    <type>Text</type>
</CustomField>