force-app/main/default/objects/HOMEtracker__Property__c/fields/EA_Layout__c.field-meta.xml
<CustomField>
    <fullName>EA_Layout__c</fullName>
    <description>Eligible Applicants Layout page for outreach.</description>
    <inlineHelpText>Eligible Applicants Layout page for outreach.</inlineHelpText>
    <label>EA Layout</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Include Invited</fullName>
                <default>true</default>
                <label>Include Invited</label>
            </value>
            <value>
                <fullName>Uninvited only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>