force-app/main/default/objects/HOMEtracker__Property__c/fields/EA_Page__c.field-meta.xml
<CustomField>
    <fullName>EA_Page__c</fullName>
    <formula>HYPERLINK(
&quot;https://cgph--c.vf.force.com/flow/EA_Page_MP_Cleanup?varID=&quot;&amp; Campaign__r.Id &amp;&quot;&amp;retURL=https%3A%2F%2Fcgph--c.vf.force.com%2Fapex%2FEAPage2nV2%3Fid%3D&quot;&amp;Id&amp;&quot;%26cId%3D&quot;&amp; Campaign__r.Id ,&quot;EA PAGE&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EA Page</label>
    <type>Text</type>
</CustomField>