force-app/main/default/objects/HOMEtracker__Property__c/fields/Elevator__c.field-meta.xml
<CustomField>
    <fullName>Elevator__c</fullName>
    <label>Elevator</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>