force-app/main/default/objects/HOMEtracker__Property__c/fields/Email_Blast_Invoiced__c.field-meta.xml
<CustomField>
    <fullName>Email_Blast_Invoiced__c</fullName>
    <inlineHelpText>Enter the date that the email blast to interest list was invoiced.</inlineHelpText>
    <label>Email Blast Invoiced</label>
    <type>Date</type>
</CustomField>