force-app/main/default/objects/HOMEtracker__Property__c/fields/Email_blast_to_interest_list__c.field-meta.xml
<CustomField>
    <fullName>Email_blast_to_interest_list__c</fullName>
    <inlineHelpText>Tracks when town or municipality requests CGP&amp;H sends email blast to interest list.</inlineHelpText>
    <label>Email blast to interest list</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not applicable</fullName>
            </value>
            <value>
                <fullName>In progress</fullName>
            </value>
            <value>
                <fullName>Sent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>