force-app/main/default/objects/HOMEtracker__Property__c/fields/Email_Recipients_for_Certs__c.field-meta.xml
<CustomField>
    <fullName>Email_Recipients_for_Certs__c</fullName>
    <inlineHelpText>Enter email addresses to include on income certification email for this development or property.  If entering multiple emails, separate them with a semicolon and space.</inlineHelpText>
    <label>Additional Email Recipients</label>
    <length>200</length>
    <type>Text</type>
</CustomField>