force-app/main/default/objects/HOMEtracker__Property__c/fields/Estimated_completion_date__c.field-meta.xml
<CustomField>
    <fullName>Estimated_completion_date__c</fullName>
    <inlineHelpText>Date by which all construction of the new development is to be finished and COs / TCOs are expected</inlineHelpText>
    <label>Estimated Completion Date</label>
    <type>Date</type>
</CustomField>