force-app/main/default/objects/HOMEtracker__Property__c/fields/Exclude_From_Inventory__c.field-meta.xml
<CustomField>
    <fullName>Exclude_From_Inventory__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If this box is checked, the property will not be shown on the development inventory page.</inlineHelpText>
    <label>Exclude From Inventory</label>
    <type>Checkbox</type>
</CustomField>