force-app/main/default/objects/HOMEtracker__Property__c/fields/Extension_of_control_verified__c.field-meta.xml
<CustomField>
    <fullName>Extension_of_control_verified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field set up for Bridgewater. Check when feel confident that controls were actually extended.</description>
    <inlineHelpText>Field set up for Bridgewater. Check when feel confident that controls were actually extended.</inlineHelpText>
    <label>Extension of control verified</label>
    <type>Checkbox</type>
</CustomField>