force-app/main/default/objects/HOMEtracker__Property__c/fields/Extension_of_Controls_notes__c.field-meta.xml
<CustomField>
    <fullName>Extension_of_Controls_notes__c</fullName>
    <description>Information about extension of controls</description>
    <inlineHelpText>Information about extension of controls</inlineHelpText>
    <label>Extension of Controls notes</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>