force-app/main/default/objects/HOMEtracker__Property__c/fields/FHA_approved_complex__c.field-meta.xml
<CustomField>
    <fullName>FHA_approved_complex__c</fullName>
    <label>FHA Approved Complex?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>