force-app/main/default/objects/HOMEtracker__Property__c/fields/First_Full_App_Invites_Sent__c.field-meta.xml
<CustomField>
    <fullName>First_Full_App_Invites_Sent__c</fullName>
    <inlineHelpText>Auto-filled when first full application invitation sent.</inlineHelpText>
    <label>First Full App Invites Sent</label>
    <type>Date</type>
</CustomField>