force-app/main/default/objects/HOMEtracker__Property__c/fields/Flood_Zone_Type__c.field-meta.xml
<CustomField>
    <fullName>Flood_Zone_Type__c</fullName>
    <label>Flood Zone Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>100 year</fullName>
            </value>
            <value>
                <fullName>500 year</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>