force-app/main/default/objects/HOMEtracker__Property__c/fields/Floor_unit_is_located_on__c.field-meta.xml
<CustomField>
    <fullName>Floor_unit_is_located_on__c</fullName>
    <description>The floor this property is located on (such as first floor or second floor).</description>
    <inlineHelpText>The floor this property is located on (such as first floor or second floor).</inlineHelpText>
    <label>Floor Unit is Located On</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ground</fullName>
            </value>
            <value>
                <fullName>1st</fullName>
            </value>
            <value>
                <fullName>2nd</fullName>
            </value>
            <value>
                <fullName>3rd</fullName>
            </value>
            <value>
                <fullName>4th</fullName>
            </value>
            <value>
                <fullName>5th</fullName>
            </value>
            <value>
                <fullName>6th</fullName>
            </value>
            <value>
                <fullName>7th</fullName>
            </value>
            <value>
                <fullName>8th</fullName>
            </value>
            <value>
                <fullName>9th</fullName>
            </value>
            <value>
                <fullName>10th</fullName>
            </value>
            <value>
                <fullName>11th</fullName>
            </value>
            <value>
                <fullName>12th</fullName>
            </value>
            <value>
                <fullName>13th</fullName>
            </value>
            <value>
                <fullName>14th</fullName>
            </value>
            <value>
                <fullName>15th</fullName>
            </value>
            <value>
                <fullName>16th</fullName>
            </value>
            <value>
                <fullName>17th</fullName>
            </value>
            <value>
                <fullName>18th</fullName>
            </value>
            <value>
                <fullName>19th</fullName>
            </value>
            <value>
                <fullName>20th</fullName>
            </value>
            <value>
                <fullName>1st, 2nd, or 3rd</fullName>
            </value>
            <value>
                <fullName>1st and 2nd</fullName>
            </value>
            <value>
                <fullName>1st and 3rd</fullName>
            </value>
            <value>
                <fullName>2nd and 3rd</fullName>
            </value>
            <value>
                <fullName>2nd and 4th</fullName>
            </value>
            <value>
                <fullName>3rd and 4th</fullName>
            </value>
            <value>
                <fullName>4th and 5th</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>