force-app/main/default/objects/HOMEtracker__Property__c/fields/Flyer_status__c.field-meta.xml
<CustomField>
    <fullName>Flyer_status__c</fullName>
    <inlineHelpText>status of affirmative marketing flyer - draft complete, final, etc.</inlineHelpText>
    <label>Flyer status</label>
    <type>TextArea</type>
</CustomField>