force-app/main/default/objects/HOMEtracker__Property__c/fields/Flyers_Distributed__c.field-meta.xml
<CustomField>
    <fullName>Flyers_Distributed__c</fullName>
    <inlineHelpText>Enter date flyers mailed at beginning of affirmative marketing period.</inlineHelpText>
    <label>Flyers Distributed</label>
    <type>Date</type>
</CustomField>