force-app/main/default/objects/HOMEtracker__Property__c/fields/form_closing_doc_location__c.field-meta.xml
<CustomField>
    <fullName>form_closing_doc_location__c</fullName>
    <inlineHelpText>docs that have been reviewed and approved by heather in prep of conga import. field to be completed when conga project is done</inlineHelpText>
    <label>form closing doc location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>