force-app/main/default/objects/HOMEtracker__Property__c/fields/Freehold_ext_of_control_research__c.field-meta.xml
<CustomField>
    <fullName>Freehold_ext_of_control_research__c</fullName>
    <description>for use by michelle during research for ext of control project</description>
    <inlineHelpText>for use by michelle during research for ext of control project</inlineHelpText>
    <label>Freehold ext of control research</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Found original AHA</fullName>
            </value>
            <value>
                <fullName>Found RESALE AHA but missing origianl</fullName>
                <label>Found RESALE AHA, but missing original</label>
            </value>
            <value>
                <fullName>Still looking for AHA</fullName>
            </value>
            <value>
                <fullName>Found AH Unit Deed, still looking for AHA</fullName>
                <label>Found AH Unit Deed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>