force-app/main/default/objects/HOMEtracker__Property__c/fields/Freehold_initial_sale_date_comments__c.field-meta.xml
<CustomField>
    <fullName>Freehold_initial_sale_date_comments__c</fullName>
    <inlineHelpText>Freehold initial sale date comments from MY or ML temp field</inlineHelpText>
    <label>Freehold initial sale date comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>