force-app/main/default/objects/HOMEtracker__Property__c/fields/Google_Tracker_Link__c.field-meta.xml
<CustomField>
    <fullName>Google_Tracker_Link__c</fullName>
    <label>Google Tracker Link</label>
    <type>Url</type>
</CustomField>