force-app/main/default/objects/HOMEtracker__Property__c/fields/Google_Tracker_Made_With_General_Gmail__c.field-meta.xml
<CustomField>
    <fullName>Google_Tracker_Made_With_General_Gmail__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box if the Google Tracker was made with the General CGP&amp;H Gmail Account.</description>
    <inlineHelpText>Check this box if the Google Tracker was made with the General CGP&amp;H Gmail Account.</inlineHelpText>
    <label>Google Tracker Made With General Gmail?</label>
    <type>Checkbox</type>
</CustomField>